--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ django-extensions == 1.5.5
 djangorestframework == 3.1.3
 envdir == 0.7
 
-django-debug-toolbar == 0.9.1
+django-debug-toolbar == 0.9
+
+requests==2.7.0
+requests-oauthlib==0.5.0
